--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,19 +3,19 @@
 ---
 
 <section id="inicio" class="h-screen md:h-screen bg-gradient-to-r from-rp-blue to-rp-light-blue text-white relative overflow-hidden">
-  <div class="container mx-auto px-4 h-full">
+  <div class="container mx-auto px-4 py-10 h-full">
     <!-- Desktop Layout -->
     <div class="hidden md:flex items-center h-full">
       <div class="grid md:grid-cols-2 gap-12 items-center w-full h-full">
-        <div class="flex flex-col justify-center">
-          <h1 class="md:text-6xl font-bold  mb-4">
-            ¡Somos Asesores Certificados en <span class="text-rp-orange">Seguros Monterrey</span>!
-          </h1>
-          <p class="text-xl mb-8">Expertos en protección y tranquilidad para ti y tu familia</p>
+        <div class="flex flex-col justify-center ">
+            <h1 class="md:text-6xl font-bold">
+            ¡Somos Asesores Certificados en <span class="text-rp-orange">Seguros Monterrey!</span>
+            </h1>
+            <p class="text-xl mb-8">Expertos en protección y tranquilidad para ti y tu familia</p>
             <a href="https://api.whatsapp.com/send/?phone=524461354113" target="_blank" class="bg-rp-white text-rp-blue px-8 py-4 rounded-full text-lg font-semibold hover:bg-rp-orange hover:text-white transition duration-300 w-fit inline-block text-center">
             ¿Necesitas asesoría? ¡Hablemos!
             </a>
-        </div>
+          </div>
         <div class="relative h-full flex flex-col justify-end items-center">
           <!-- Logo New York Life -->
           
@@ -27,7 +27,7 @@
 
     <!-- Mobile Layout -->
     <div class="md:hidden flex flex-col h-full relative">
-      <div class="flex flex-col justify-start pt-20 pb-4 z-10">
+      <div class="flex flex-col justify-start pt-24 sm:pt-28 pb-4 z-10 px-2">
         <h1 class="text-3xl font-bold mb-4 ">
           ¡Somos Asesores Certificados en <span class="text-rp-orange">Seguros Monterrey</span>!
         </h1>
