--- a/src/pages/seguros-vida/imagina-ser.astro
+++ b/src/pages/seguros-vida/imagina-ser.astro
@@ -279,10 +279,11 @@ const pageDescription = "Que te motive ahorrar para el retiro que imaginas. Segu
               <a href="/seguros-vida/nuevo-plenitud" class="text-blue-600 hover:text-blue-800 font-semibold">Ver más →</a>
             </div>
             <div class="bg-white p-6 rounded-lg shadow-lg">
-              <h3 class="text-xl font-bold mb-3 text-gray-800">Realiza</h3>
-              <p class="text-gray-600 mb-4">Es un Seguro de Vida que combina protección con opciones de ahorro, obteniendo rendimientos según el comportamiento del mercado.</p>
-              <a href="/seguros-vida/realiza" class="text-blue-600 hover:text-blue-800 font-semibold">Ver más →</a>
+              <h3 class="text-xl font-bold mb-3 text-gray-800">Orvi 99</h3>
+                <p class="text-gray-600 mb-4">El único seguro que te protege hasta los 99 años, brindándote cobertura extendida para toda la vida.</p>
+              <a href="/seguros-vida/orvi" class="text-blue-600 hover:text-blue-800 font-semibold">Ver más →</a>
             </div>
+          </div>
           </div>
         </div>
       </div>
